# riverborn

./: .gitignore  README.md  TODO.txt  pyproject.toml  requirements.txt  run_game.py
.github/: copilot-instructions.md
src/riverborn/: __init__.py  camera.py  context.py  culling.py  demo_shadow.py  heightfield.py  mgl_terrain.py  picking.py  plants.py  ripples.py  scene.py  shader.py  shadow.py  shadow_debug.py  shadow_debug_demo.py  terrain.py  tools.py
src/riverborn/data/: animals.json  terrain.npy
src/riverborn/models/: boat.mtl  textured.mtl
src/riverborn/shaders/: ambient_occlusion.frag  ambient_occlusion.vert  depth.frag  depth.vert  diffuse.frag  diffuse.vert  ripple_sim.frag  shadow.frag  shadow.vert  texture_alpha.frag  texture_alpha.vert  water.frag  water.vert
tests/: test_rendering.py  test_shader.py
