[project]
name = "riverborn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "glfw>=2.8.0",
    "imageio>=2.37.0",
    "moderngl>=5.12.0",
    "moderngl-window>=3.1.1",
    "noise>=1.2.2",
    "numpy>=2.2.4",
    "pygfx>=0.9.0",
    "pyrr>=0.10.3",
]

[project.scripts]
riverborn = "riverborn:main"
riverborn-heightfield = "riverborn.heightfield:main"


[build-system]
requires = ["flit_scm>=1.7.0"]
build-backend = "flit_scm:buildapi"

[tool.flit.sdist]
exclude = [".gitignore"]

[tool.setuptools_scm]
write_to = "src/riverborn/_version.py"
relative_to = "pyproject.toml"
